# oaipmh-scythe

./: pyproject.toml
src/oaipmh_scythe/: client.py  models.py  response.py  utils.py
tests/cassettes/: list_identifiers.yaml
tests/integration/: test_identify.py  test_list_identifiers.py  test_list_records.py
tests/unit/: test_client.py  test_models.py  test_response.py  test_utils.py
