[build-system] #  Ref: https://docs.astral.sh/uv/concepts/build-backend
build-backend = "uv_build"
requires = [ "uv-build" ]

[project]
name = "oaipmh-scythe"
version = "0.13.0"
description = "A Scythe for harvesting OAI-PMH repositories."
readme = "README.md"
keywords = [
  "metadata",
  "oai-pmh",
  "oai-pmh-client",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "Heinz-Alexander Fütterer" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Text Processing :: Markup :: XML",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
]
urls.Changelog = "https://github.com/afuetterer/oaipmh-scythe/blob/main/CHANGELOG.md"
urls.Documentation = "https://afuetterer.github.io/oaipmh-scythe"
urls.Issues = "https://github.com/afuetterer/oaipmh-scythe/issues"
urls.Repository = "https://github.com/afuetterer/oaipmh-scythe.git"

[dependency-groups]
dev = [
  "pre-commit-uv",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "pytest-recording",
  "pytest-xdist",
  "respx",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-include-markdown-plugin",
  "mkdocs-material",
  "mkdocs-minify-plugin",
  "mkdocstrings[python]",
]

[tool.ruff] # Ref: https://docs.astral.sh/ruff/configuration/
line-length = 120
src = [ "src", "tests" ]
# Ref: https://docs.astral.sh/ruff/settings/#format
format.docstring-code-format = true
# Ref: https://docs.astral.sh/ruff/rules/
lint.extend-select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "G",    # flake8-logging-format
  "I",    # isort
  "PERF", # perflint-perf
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TCH",  # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
lint.ignore = [
  "D105", # undocumented-magic-method
  "D107", # undocumented-public-init
]
lint.per-file-ignores."src/oaipmh_scythe/client.py" = [
  "PLR0913", # too-many-arguments
]
lint.per-file-ignores."tests/**.py" = [
  "D",       # pydocstyle
  "PLR2004", # magic-value-comparison
]
lint.unfixable = [
  "F401", # unused-import
]
lint.isort.known-first-party = [ "oaipmh_scythe" ]
lint.pydocstyle.convention = "google"

[tool.repo-review] # Ref: https://github.com/scientific-python/cookie/tree/main#list-of-checks
ignore = [
  # Pre-commit
  "PC111", # blacken-docs
  "PC160", # codespell
  "PC170", # pygrep hooks
  "PC180", # prettier
  "PY007", # supports an easy task runner - we use "just"
  "MY",    # mypy
  "RTD",   # read the docs
]

[tool.pytest.ini_options] # Ref: https://docs.pytest.org/en/stable/customize.html
minversion = "8.0"
addopts = [ "-ra", "--showlocals", "--strict-markers", "--strict-config" ]
filterwarnings = [ "error" ]
log_cli_level = "INFO"
xfail_strict = true
testpaths = "tests"

[tool.coverage.run] # Ref: https://coverage.readthedocs.io/en/latest/config.html
branch = true
parallel = true
source = [ "oaipmh_scythe" ]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
fail_under = 90
show_missing = true
skip_covered = true
skip_empty = true

[tool.mypy] # Ref: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
pretty = true
show_column_numbers = true
show_error_context = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
warn_unreachable = true

[tool.uv]
default-groups = [ "dev", "test" ]

[tool.licensecheck] # Ref: https://github.com/FHPythonUtils/LicenseCheck/#example-1-pyprojecttoml
using = "PEP631"
format = "ansi"

[tool.semantic_release] # Ref: https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration.html#semantic-release-settings
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_message = "chore: release {version}\n\nAutomatically generated by python-semantic-release [skip ci]"
allow_zero_version = true
major_on_zero = false
tag_format = "{version}"
version_toml = [
  "pyproject.toml:project.version",
]
build_command = """
sed -i "s/^version: .*/version: $NEW_VERSION/" CITATION.cff
sed -i "s/^date-released: .*/date-released: $(date "+%Y-%m-%d")/" CITATION.cff
git add CITATION.cff
python -m pip install "build[uv]"
python -m build --installer=uv
"""
changelog.template_dir = ".github/templates"
changelog.environment.keep_trailing_newline = true

[tool.typos] # Ref: https://github.com/crate-ci/typos/blob/master/docs/reference.md
# add "spellchecker:disable-line" to ignore specific lines
default.extend-ignore-re = [ "(?Rm)^.*# spellchecker:disable-line$" ]
